--- a/src/main/resources/static/css/signup.css
+++ b/src/main/resources/static/css/signup.css
@@ -1,168 +1,245 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
-
-:root {
-    --red: hsl(0, 100%, 74%);
-    --green: hsl(154, 59%, 51%);
-    --blue: hsl(248, 32%, 49%);
-    --darkBlue: hsl(249, 10%, 26%);
-    --grayBlue: hsl(246, 25%, 77%);
-}
-html {
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100;300;400;500;600;700;800&display=swap');
+*,
+*::before,
+*::after {
     box-sizing: border-box;
 }
-*,*::before,*::after {
-    box-sizing: inherit;
-}
 body {
-    background-color: var(--red);
-    background-image: url(images/bg-intro-mobile.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-    font-family: 'Poppins',sans-serif;
-    text-align: center;
-    color: #fff;
-}
-
-.container {
-    display: flex;
-    flex-direction: column;
-    margin: 60px 20px 30px 20px;
-    justify-content: space-between;
-}
-
-.header h1 {
-    font-size: 26px;
-    line-height: 1.3;
-    font-weight: 600;
-    opacity: 0.96;
-}
-.header p {
-    opacity: 0.8;
-    line-height: 1.5;
-}
-
-.content .price_card {
-    padding: 15px;
-    margin: 15px 0 30px 0;
-    background-color: var(--blue);
-    border-radius: 10px;
-    box-shadow: 0px 10px rgba(46, 49, 49, 0.38);
-}    
-.content .price_card p {
-    padding-left: 10px;
-    padding-right: 10px;
-    font-weight: 300;
     margin: 0;
+    height: 100vh;
+    background: #fefefe;
+    font-family: 'Kumbh Sans', sans-serif;
 }
-.content .price_card p span {
-    font-weight: 600;
+a {
+    outline: 0;
+    text-decoration: none;
 }
 
-.info_card {
+.navigation {
     display: flex;
-    flex-direction: column;
-    padding: 15px 0px 15px 0px;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0px 10px rgba(46, 49, 49, 0.38);
+    justify-content: space-between;
+    width: 100%;
+    border-bottom: 3px solid #ccd7d7;
+    font-family: 'Pathway Gothic One', sans-serif;
+    font-size: 15px;
 }
-
-.info_card input {
+.logo {
+    padding-left: 3%;
+    cursor: pointer;
+}
+.logo img {
+    height: 100px;
+    width: 100px;
+}
+.options {
+    display: flex;
+    align-items: center;
+    flex-basis: 50%;
+    font-size: medium;
+}
+.menu {
+    display: flex;
+    justify-content: center;
+    max-width: 1150px;
+    margin: 0 auto;
+    padding-left: 0;
+}
+.menu__item {
+    display: inline-block;
+    white-space: nowrap;
+}
+.menu__item:last-child .menu__link {
+    border-right: 0;
+}
+.menu__link {
     display: block;
-    margin: 30px auto 0px auto;
-    padding: 15px;
-    width: 84.84%;
-    height: 50px;
-    border: 1px solid hsl(246, 25%, 92%);
-    border-radius: 5px;
-    color: var(--darkBlue);
-    font-weight: 500;
+    padding: 6px 30px 3px;
+    border-right: 2px dotted #ccd7d7;
 }
-.info_card .input_error {
-    display: none;
+.menu__link:hover .menu__first-word,
+.menu__link:focus .menu__first-word {
+    transform: translate3d(0, -105%, 0);
 }
-.info_card input::placeholder {
-    color: var(--grayBlue);
+.menu__link:hover .menu__second-word,
+.menu__link:focus .menu__second-word {
+    transform: translate3d(0, 105%, 0);
 }
-.info_card .error {
-    background: url(images/icon-error.svg);
-    background-repeat: no-repeat;
-    background-position: right 10px center;
+/* @media screen and (min-width: 768px) {
+    .menu__link {
+        padding: 6px 40px 3px;
+   }
+} */
+.menu__title {
+    display: inline-block;
+    overflow: hidden;
 }
-.info_card .success {
-    background: none;
+.menu__first-word,
+.menu__second-word {
+    display: inline-block;
+    position: relative;
+    transition: transform 0.3s;
 }
-.info_card label {
-    float: right;
-    color: var(--red);
-    font-size: 10px;
-    margin-right: 10%;
-    font-weight: 500;
-    font-style: italic;
+.menu__first-word::before,
+.menu__second-word::before {
+    position: absolute;
+    content: attr(data-hover);
 }
-.info_card button {
+.menu__first-word {
+    color: #0c8040;
+}
+.menu__first-word::before {
+    top: 105%;
+    color: #626262;
+}
+.menu__second-word {
+    color: #626262;
+}
+.menu__second-word::before {
+    bottom: 105%;
+    color: #0c8040;
+}
+.signup_link {
+    background: hsla(220, 13%, 13%, 0.8);
+    margin-left: 20px;
+    margin-top: -3px;
+    margin-right: 20px;
+    padding-top: 8px;
+    padding-bottom: 6px;
+    border-radius: 11px;
+    text-align: center;
+}
+.signup_first-word {
+    color: #07e26a;
+}
+.signup_first-word::before {
+    color: rgb(247, 242, 242);
+}
+.signup_second-word {
+    color: rgb(248, 244, 244);
+}
+.signup_second-word::before {
+    color: #07e26a;
+}
+
+.midbody {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* padding-top: 2%; */
+    padding-left: 6%;
+    /* padding-right: 4%; */
+}
+.leftBody {
+    flex-basis: 40%;
+}
+
+.leftBody .headers h1 {
+    font-size: 55px;
+    font-weight: 800;
+    color: hsl(220, 13%, 13%);
+    letter-spacing: 1.5px;
+    margin-top: 0;
+}
+
+.leftBody .headers p {
+    font-weight: 700;
+    letter-spacing: 1.7px;
+    color: #0c8040;
+    padding-left: 2px;
+}
+svg {
+    width: 87%;
+}
+form label {
     display: block;
-    margin: 30px auto 0 auto;
-    background-color: var(--green);
-    color: #fff;
-    text-transform: uppercase;
-    font-weight: 600;
-    letter-spacing: 1.75px;
-    border: none;
-    border-radius: 5px;
-    box-shadow: 0px 4px rgba(13, 92, 59, 0.7);
-    width: 84.84%;
-    height: 50px;
-    cursor:pointer;
-}
-.info_card button:hover {
-    box-shadow: 0px 4px rgba(13, 92, 59, 0.3);
-}
-.info_card p {
-    padding-left: 23px;
-    padding-right: 23px;
-    font-size: 12px;
-    color: var(--grayBlue);
-}
-.info_card p span {
-    color: var(--red);
-    font-weight: 600;
+    margin-bottom: 9px;
+    margin-top: 9px;
+    margin-left: 6px;
+    color: #065c2d;
+    font-size: 13px;
+    letter-spacing: 1.2px;
 }
 
-@media only screen and (min-width: 1000px) {
-    body {
-        background-image: url(images/bg-intro-desktop.png);
-        background-size: auto;
-        text-align: left;
-    }
-    
-    .container {
-        flex-direction: row;
-        align-items: center;
-        margin-left: 100px;
-        margin-right: 100px;
-        padding-top: 40px;
-        justify-content: space-between;
-    }
+form input {
+    width: 87.5%;
+    height: 55px;
+    padding: 20px;
+    outline: none;
+    border: 0.1px solid #d6d2d2;
+    background-color: #f0f0f0;
+    border-radius: 15px;
+    color: #333634;
+    font-family: inherit;
+    letter-spacing: 1.2px;
+}
 
-    .header {
-        flex: 1 0 45%;
-    }
-    .header h1 {
-        font-size: 60px;
-        padding-right: 20px;
-    }
-    .header p{
-        padding-right: 50px;
-    }
+.usernameDiv {
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 20px;
+}
+.firstname {
+    display: inline-block;
+    flex-basis: 50%;
+}
+.firstname label {
+    display: inline-block;
+    margin-bottom: 9px;
+    margin-top: 9px;
+}
+.firstname input {
+    display: block;
+    margin: 0;
+    width: 75%;
+}
+.lastname {
+    flex-basis: 50%;
+}
+.lastname label {
+    display: inline-block;
+    margin-bottom: 9px;
+    margin-top: 9px;
+}
+.lastname input {
+    display: block;
+    width: 75%;
+}
 
-    .content {
-        flex: 1 0 45%;
-        margin-left: 50px;
-    }
-    .content .price_card {
-        text-align: center;
-    }
+.emailDiv {
+    margin-bottom: 20px;
+}
 
+.passwordDiv {
+    margin-bottom: 20px;
+}
+
+.buttonDiv button {
+    width: 60px;
+    height: 60px;
+    padding: 24px 32px;
+    border: 0;
+    border-radius: 15px;
+    background-color: rgba(29, 177, 10, 0.4);
+    backdrop-filter: blur(30px);
+    cursor: pointer;
+    transition: all 0.7s;
+}
+.buttonDiv button:hover {
+    background-color: rgba(29, 177, 10, 0.6);
+}
+.fa-arrow-right:before {
+    position: absolute;
+    text-align: center;
+    content: "\f061";
+    font-size: 20px;
+    top: 34%;
+    left: 40%;
+}
+.rightBody {
+    flex-basis: 60%;
+}
+
+.rightBody .images img {
+    transition: all 0.7s;
+    width: 87%;
 }
