Added span for error
Added span for error

--- a/src/main/resources/static/css/signup.css
+++ b/src/main/resources/static/css/signup.css
@@ -243,3 +243,9 @@ form input {
     transition: all 0.7s;
     width: 87%;
 }
+
+.error_span {
+    display: block;
+    margin-top: 20px;
+    color: #e40909;
+}
