--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -102,29 +102,31 @@
                 <h1>Sign Up</h1>
             </div>
             <div class="formControl">
-                <form th:action="@{/signup}" method="post" th:object="${user}">
+                <form id="frm" th:action="@{/signup}" method="post" th:object="${user}">
                     <div class="usernameDiv">
                         <div class="firstname">
                             <label for="firstname">First Name</label>
-                            <input type="text" name="firstname" th:field="*{firstname}" class="firstname" id="firstname" placeholder="First Name" required>
+                            <input type="text" name="firstname" th:field="*{firstname}" th:autocomplete="off" class="firstname" id="firstname" placeholder="First Name" required>
                         </div>
                         <div class="lastname">
                             <label for="lastname">Last Name</label>
-                            <input type="text" name="lastname" th:field="*{lastname}" class="lastname" id="lastname" placeholder="Last Name" required>
+                            <input type="text" name="lastname" th:field="*{lastname}" th:autocomplete="off" class="lastname" id="lastname" placeholder="Last Name" required>
                         </div>
                     </div>
                     <div class="emailDiv">
                         <label for="email">E-mail</label>
-                        <input type="email" name = "email" th:field="*{email}" class="email" id="email" placeholder="E-mail" required>
+                        <input type="email" name = "email" th:field="*{email}" th:autocomplete="off" class="email" id="email" placeholder="E-mail" required>
                     </div>
                     <div class="passwordDiv">
                         <label for="password">Password</label>
-                        <input type="password" name="password" th:field="*{password}" id="password" class="password" placeholder="Password" required>
+                        <input type="password" name="password" th:field="*{password}" th:autocomplete="off" id="password" class="password" placeholder="Password" required>
                     </div>
                     <div class="buttonDiv">
                         <button type="submit" class="submit" id="submit"><i class="fa-solid fa-arrow-right"></i></button>
                     </div>
+
                 </form>
+                <span class = "error_span" th:text="${emailExists}"></span>
             </div>
         </div>
         <div class="rightBody">
