--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -106,20 +106,20 @@
                     <div class="usernameDiv">
                         <div class="firstname">
                             <label for="firstname">First Name</label>
-                            <input type="text" name="firstname" th:field="*{firstname}" th:autocomplete="off" class="firstname" id="firstname" placeholder="First Name" required>
+                            <input type="text" name="firstname" th:field="*{firstname}" autocomplete="off" class="firstname" id="firstname" placeholder="First Name" required>
                         </div>
                         <div class="lastname">
                             <label for="lastname">Last Name</label>
-                            <input type="text" name="lastname" th:field="*{lastname}" th:autocomplete="off" class="lastname" id="lastname" placeholder="Last Name" required>
+                            <input type="text" name="lastname" th:field="*{lastname}" autocomplete="off" class="lastname" id="lastname" placeholder="Last Name" required>
                         </div>
                     </div>
                     <div class="emailDiv">
                         <label for="email">E-mail</label>
-                        <input type="email" name = "email" th:field="*{email}" th:autocomplete="off" class="email" id="email" placeholder="E-mail" required>
+                        <input type="email" name = "email" th:field="*{email}" autocomplete="off" class="email" id="email" placeholder="E-mail" required>
                     </div>
                     <div class="passwordDiv">
                         <label for="password">Password</label>
-                        <input type="password" name="password" th:field="*{password}" th:autocomplete="off" id="password" class="password" placeholder="Password" required>
+                        <input type="password" name="password" th:field="*{password}" autocomplete="off" id="password" class="password" placeholder="Password" required>
                     </div>
                     <div class="buttonDiv">
                         <button type="submit" class="submit" id="submit"><i class="fa-solid fa-arrow-right"></i></button>
