Sign In Complete

--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -109,7 +109,7 @@
                 <form th:action="@{/signin}" method="post">
                     <div class="emailDiv">
                         <label for="email">E-mail</label>
-                        <input type="text" name="username" id="email" class="email" placeholder="E-mail" required>
+                        <input type="email" name="username" id="email" class="email" placeholder="E-mail" required>
                     </div>
                     <div class="passwordDiv">
                         <label for="password">Password</label>
