--- a/src/main/resources/templates/aboutus.html
+++ b/src/main/resources/templates/aboutus.html
@@ -31,7 +31,7 @@
         
         
                 <li class="menu__item">
-                    <a href="#" class="menu__link">
+                    <a href="/newarrivals" class="menu__link">
                         <span class="menu__title">
                             <span class="menu__first-word" data-hover="New">
                                 New
