--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -33,7 +33,7 @@
                 </li>
 
                 <li class="menu__item">
-                    <a href="#" class="menu__link">
+                    <a href="/newarrivals" class="menu__link">
                 <span class="menu__title">
                   <span class="menu__first-word" data-hover="New"> New </span>
                   <span class="menu__second-word" data-hover="Arrivals">
