--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -71,7 +71,7 @@
                     </li>
 
 <!--                    If signed in then sign in and sign up won't show-->
-                    <li  sec:authorize="isAuthenticated()" class="menu__item">
+                    <li class="menu__item">
                         <a href="/signin" class="menu__link">
                             <span class="menu__title">
                                 <span class="menu__first-word" data-hover="Sign">
@@ -84,7 +84,7 @@
                         </a>
                     </li>
 
-                    <li sec:authorize="isAuthenticated()" class="menu__item signup">
+                    <li class="menu__item signup">
                         <a href="/signup" class="menu__link signup_link">
                             <span class="menu__title">
                                 <span class="menu__first-word signup_first-word" data-hover="Sign">
@@ -97,20 +97,20 @@
                         </a>
                     </li>
 
-                    <div sec:authorize="!isAuthenticated()" class="action">
-                        <div class="profile" onclick="menuToggle();">
-                            <i class="fa-solid fa-skull"></i>
-                        </div>
-                        <div class="manu">
-                            <h3>User</h3>
-                            <ul>
-                                <li><i class="fa-solid fa-user-astronaut fa-flip" style="--fa-animation-duration: 3s;"></i> <a href="#">My Profile</a></li>
-                                <li><i class="fa-solid fa-user-gear fa-flip" style="--fa-animation-duration: 3s;"></i><a href="#">Edit Profile</a></li>
-                                <li><i class="fa-solid fa-handshake-angle fa-flip" style="--fa-animation-duration: 3s;"></i><a href="#">Help</a></li>
-                                <li><i class="fa-solid fa-right-from-bracket fa-flip" style="--fa-animation-duration: 3s;"></i><a href="/logout">Logout</a></li>
-                            </ul>
-                        </div>
-                    </div>
+<!--                    <div sec:authorize="!isAuthenticated()" class="action">-->
+<!--                        <div class="profile" onclick="menuToggle();">-->
+<!--                            <i class="fa-solid fa-skull"></i>-->
+<!--                        </div>-->
+<!--                        <div class="manu">-->
+<!--                            <h3>User</h3>-->
+<!--                            <ul>-->
+<!--                                <li><i class="fa-solid fa-user-astronaut fa-flip" style="&#45;&#45;fa-animation-duration: 3s;"></i> <a href="#">My Profile</a></li>-->
+<!--                                <li><i class="fa-solid fa-user-gear fa-flip" style="&#45;&#45;fa-animation-duration: 3s;"></i><a href="#">Edit Profile</a></li>-->
+<!--                                <li><i class="fa-solid fa-handshake-angle fa-flip" style="&#45;&#45;fa-animation-duration: 3s;"></i><a href="#">Help</a></li>-->
+<!--                                <li><i class="fa-solid fa-right-from-bracket fa-flip" style="&#45;&#45;fa-animation-duration: 3s;"></i><a href="/logout">Logout</a></li>-->
+<!--                            </ul>-->
+<!--                        </div>-->
+<!--                    </div>-->
                 </ul>
             
             </div>
