--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -15,6 +15,10 @@
             src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
             defer
     ></script>
+    <script
+            src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+            defer
+    ></script>
     <script th:src="@{/js/signup.js}" defer></script>
     <title>BookLess | SignUp</title>
 </head>
@@ -111,7 +115,7 @@
                 <h1 id="sign">Sign Up</h1>
             </div>
             <div class="formControl">
-                <form id="frm" th:action="@{/signup}" method="post">
+                <form id="frm" method="post">
                     <div class="usernameDiv">
                         <div class="firstname">
                             <label for="firstname">First Name</label>
@@ -131,11 +135,11 @@
                         <input type="password" name="password" autocomplete="off" id="password" class="password" placeholder="Password" required>
                     </div>
                     <div class="buttonDiv">
-                        <button type="submit" class="submit" id="btn"><i class="fa-solid fa-arrow-right"></i></button>
+                        <button type="button" class="submit" id="btn"><i class="fa-solid fa-arrow-right"></i></button>
                     </div>
 
                 </form>
-<!--                <span class = "error_span" th:text="${emailExists}"></span>-->
+                <span id = "error_span" class = "error_span"></span>
             </div>
         </div>
         <div class="rightBody">
