--- a/src/main/resources/static/css/signup.css
+++ b/src/main/resources/static/css/signup.css
@@ -14,7 +14,9 @@ a {
     outline: 0;
     text-decoration: none;
 }
-
+.container {
+    position: relative;
+}
 .navigation {
     display: flex;
     justify-content: space-between;
@@ -248,4 +250,52 @@ form input {
     display: block;
     margin-top: 20px;
     color: #e40909;
+}
+
+.hide {
+    display: none;
+}
+.containerA {
+    position: absolute;
+    bottom: 32px;
+    left: 18%;
+    margin: 100px auto;
+    width: 300px;
+    text-align: center;
+}
+
+.prg {
+    background: rgba(0, 0, 0, 0.25);
+    border-radius: 4px;
+    padding: 5px;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.25), 0 1px rgba(255, 255, 255, 0.08);
+}
+
+.INprg {
+    height: 12px;
+    background-color: #ee303c;
+    border-radius: 4px;
+    transition: 0.4s linear;
+    transition-property: width, background-color;
+}
+
+
+.prg-animate .INprg {
+    background-color: #009688;
+    width: 100%;
+    background-image: linear-gradient(45deg, #00796B 25%,
+    transparent 25%, transparent 50%,
+    #00796B 50%, #00796B 75%,
+    transparent 75%, transparent);
+    animation: progressAnimationStrike 4s;
+}
+
+@keyframes progressAnimationStrike {
+    from {
+        width: 0
+    }
+
+    to {
+        width: 100%
+    }
 }
