--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -6,6 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" th:href="@{/css/signin.css}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script
+            src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"
+            defer
+    ></script>
+    <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+            defer
+    ></script>
+    <script
+            src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+            defer
+    ></script>
+    <script th:src="@{/js/signin.js}" defer></script>
     <title>BookLess | Sign In</title>
 </head>
 <body>
@@ -106,7 +120,7 @@
                 <h1>Sign In</h1>
             </div>
             <div class="formControl">
-                <form th:action="@{/signin}" method="post">
+                <form id="frm" method="post">
                     <div class="emailDiv">
                         <label for="email">E-mail</label>
                         <input type="email" name="username" id="email" class="email" placeholder="E-mail" required>
@@ -116,10 +130,10 @@
                         <input type="password" name="password" id="password" class="password" placeholder="Password" required>
                     </div>
                     <div class="buttonDiv">
-                        <button type="submit" class="submit" id="submit"><i class="fa-solid fa-arrow-right"></i></button>
+                        <button type="button" class="submit" id="btn"><i class="fa-solid fa-arrow-right"></i></button>
                     </div>
                 </form>
-                <span class = "error_span" th:if="${param.error}">Could not verify the data entered.<br> Please re-enter or register with us</span>
+                <span id = "error_span" class = "error_span"</span>
             </div>
         </div>
     </div>
