--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -8,18 +8,9 @@
     <link rel="stylesheet" th:href="@{/css/signup.css}" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script
-            src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"
-            defer
-    ></script>
-    <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-            defer
-    ></script>
-    <script
             src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
             defer
     ></script>
-    <script th:src="@{/js/signup.js}" defer></script>
     <title>BookLess | SignUp</title>
 </head>
 <body>
@@ -119,20 +110,20 @@
                     <div class="usernameDiv">
                         <div class="firstname">
                             <label for="firstname">First Name</label>
-                            <input type="text" name="firstname" autocomplete="off" class="firstname" id="firstname" placeholder="First Name" required>
+                            <input type="text" name="firstname" autocomplete="off" class="firstname" id="firstname" placeholder="First Name">
                         </div>
                         <div class="lastname">
                             <label for="lastname">Last Name</label>
-                            <input type="text" name="lastname" autocomplete="off" class="lastname" id="lastname" placeholder="Last Name" required>
+                            <input type="text" name="lastname" autocomplete="off" class="lastname" id="lastname" placeholder="Last Name">
                         </div>
                     </div>
                     <div class="emailDiv">
                         <label for="email">E-mail</label>
-                        <input type="email" name = "email" autocomplete="off" class="email" id="email" placeholder="E-mail" required>
+                        <input type="email" name = "email" autocomplete="off" class="email" id="email" placeholder="E-mail">
                     </div>
                     <div class="passwordDiv">
                         <label for="password">Password</label>
-                        <input type="password" name="password" autocomplete="off" id="password" class="password" placeholder="Password" required>
+                        <input type="password" name="password" autocomplete="off" id="password" class="password" placeholder="Password">
                     </div>
                     <div class="buttonDiv">
                         <button type="button" class="submit" id="btn"><i class="fa-solid fa-arrow-right"></i></button>
@@ -148,7 +139,19 @@
             </div>
         </div>
     </div>
+
+    <!--    Loading Container -->
+    <div class="containerA hide" id = "containerA">
+        <div class="prg prg-animate">
+            <div class="INprg">
+
+            </div>
+        </div>
+    </div>
 </section>
-<script></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>-->
+<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.js"></script>
+<script th:src="@{/js/signup.js}"></script>
 </body>
 </html>
