--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -110,17 +110,17 @@
                 <form id="frm" method="post">
                     <div class="emailDiv">
                         <label for="email">E-mail</label>
-                        <input type="email" name="username" id="email" class="email" placeholder="E-mail" required>
+                        <input type="email" name="username" id="email" class="email" placeholder="E-mail">
                     </div>
                     <div class="passwordDiv">
                         <label for="password">Password</label>
-                        <input type="password" name="password" id="password" class="password" placeholder="Password" required>
+                        <input type="password" name="password" id="password" class="password" placeholder="Password">
                     </div>
                     <div class="buttonDiv">
-                        <button type="button" class="submit" id="btn"><i class="fa-solid fa-arrow-right"></i></button>
+                        <button type="submit" class="submit" id="btn"><i class="fa-solid fa-arrow-right"></i></button>
                     </div>
                 </form>
-                <span id = "error_span" class = "error_span"</span>
+                <span id = "error_span" th:if="${param.signinError}" th:text="'User does not exist (Bad Credentials or User not verified)'" class = "error_span"</span>
             </div>
         </div>
     </div>
@@ -129,6 +129,6 @@
 <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.js"></script>
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>-->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-<script th:src="@{/js/signin.js}" defer></script>
+<script th:src="@{/js/signin.js}"></script>
 </body>
 </html>
